# toy_blockchain

./: .gitignore  BUILD.md  Cargo.toml  cargo_check_fresh_output.txt  cargo_check_output.txt  generate_project_showcase.py
blockchain_db/: db  example_seed.json
src/: blockchain.rs  error.rs  main.rs  mempool.rs  merkle.rs  network.rs  transaction.rs
