[package]
name = "toy_blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ed25519-dalek = "2.0"
rand = "0.8"
hex = "0.4"
base64 = { version = "0.21", features = ["std"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sled = "0.34"
thiserror = "1.0"
anyhow = "1.0"
merkle_light = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
bincode = "1.3"
